<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="0dp"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:id="@+id/cardview_2"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardElevation="5dp"
        tools:ignore="MissingConstraints"
        android:focusable="true">
        <LinearLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:orientation="vertical">

        <com.robbie.wezacareships.utils.WezacareTextViewBold
            android:id="@+id/txt_shipid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ship_id"
            android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <com.robbie.wezacareships.utils.WezacareTextViewBold
            android:id="@+id/txt_ship_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ship_name"
           android:textColor="@color/primary" />

                <View style="@style/Divider.Vertical"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"/>
        <com.robbie.wezacareships.utils.WezacareTextViewBold
            android:id="@+id/txt_port"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/port_name"
            android:textColor="@color/purple_700"/>

            </LinearLayout>

        </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="115dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description"
        android:src="@mipmap/ic_launcher_round"/>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
